Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyRule__c/DeweyRule__c.object-meta.xml
<CustomObject>
    <label>Dewey Rule</label>
    <pluralLabel>Dewey Rules</pluralLabel>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Assessment rules used by the Dewey org assessment tool. Read at skill startup to drive static analysis.</description>
</CustomObject>