Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyRule__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>