Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyRule__c/fields/IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEnabled__c</fullName>
    <label>Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this rule is skipped during analysis without requiring a deployment.</description>
</CustomField>