Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyRule__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message displayed in the finding. Should be concise and actionable.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>