Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyRule__c/fields/PmdRuleRef__c.field-meta.xml
<CustomField>
    <fullName>PmdRuleRef__c</fullName>
    <description>Original PMD rule reference path (e.g. category/apex/security.xml/ApexSharingViolations). Populated by pmd_import_service.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PMD Rule Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>