Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyRule__c/fields/Remediation__c.field-meta.xml
<CustomField>
    <fullName>Remediation__c</fullName>
    <description>Detailed remediation guidance for this rule violation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Remediation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>