Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyRule__c/fields/RuleId__c.field-meta.xml
<CustomField>
    <fullName>RuleId__c</fullName>
    <description>Unique rule identifier. Format: CATEGORY-SUBCATEGORY-NNN (ex: APEX-SEC-001). Used as join key with analyzer output.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Rule ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>