Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyRule__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dewey</fullName>
                <default>true</default>
                <label>Dewey</label>
            </value>
            <value>
                <fullName>PMD</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>