Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyRule__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Text</type>
    <length>100</length>
</CustomField>