Mode Org Salesforce/dewey-orgSF/force-app/main/default/objects/DeweyRule__c/fields/WellArchitectedRef__c.field-meta.xml
<CustomField>
    <fullName>WellArchitectedRef__c</fullName>
    <description>Link to the relevant Salesforce Well-Architected Framework section.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Well-Architected Reference</label>
    <type>Url</type>
</CustomField>